--- a/config/locales/responders.en.yml
+++ b/config/locales/responders.en.yml
@@ -11,6 +11,13 @@ en:
         notice: '%{resource_name} was successfully destroyed.'
         alert: '%{resource_name} could not be destroyed.'
     members:
+      passwords:
+        create:
+          notice: We'll send a password reset link to your email %{email}
+          alert: Must be a valid email
+        update:
+          notice: Your password was successfully updated
+          alert: Could not update your password
       sessions:
         create:
           notice: You are now signed in and able to see member pages.
