--- a/config/locales/responders.sv.yml
+++ b/config/locales/responders.sv.yml
@@ -11,6 +11,14 @@ sv:
         notice: '%{resource_name} togs bort.'
         alert: '%{resource_name} kunde inte tas bort.'
     members:
+      passwords:
+        create:
+          notice: Vi skickar ett mail med en återställningslänk till din
+            e-postadress %{email}
+          alert: Måste ange en giltig e-postadress
+        update:
+          notice: Ditt lösenord har nu uppdaterats
+          alert: Kunde inte uppdatera lösenordet
       sessions:
         create:
           notice: Du är nu inloggad och kan se medlemssidor.
