--- a/config/locales/responders.sv.yml
+++ b/config/locales/responders.sv.yml
@@ -24,6 +24,8 @@ sv:
           notice: Du är nu inloggad och kan se medlemssidor.
           alert: Nej, det gick minsann inte. Kolla lösenordet.
       signups:
+        new:
+          alert: Medlemsregistrering är inaktiverat på den här webbplatsen
         create:
           notice: Tack för din ansökan om medlemskonto. När administratören för
             sidan har granskat ditt konto får du ett mail med
