Add pagination to admin/members

--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -378,3 +378,7 @@ sv:
   member_mailer:
     approved: "Ditt medlemskonto på %{title} är nu godkänt"
     password_reset_link: "Återställning av lösenord på %{title}"
+  will_paginate:
+    previous_label: "&#8592; Föregående"
+    next_label: "Nästa &#8594;"
+    page_gap: "&hellip;"
