--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -306,3 +306,7 @@ en:
   member_mailer:
     approved: "Your membership account at %{title} is now approved"
     password_reset_link: "Reset of password at %{title}"
+  will_paginate:
+    previous_label: "&#8592; Previous"
+    next_label: "Next &#8594;"
+    page_gap: "&hellip;"
