Issue #43 Make member list sortable and searchable
Begin writing some tests for member searching
Replace sqlite test database with mysql
We are using concat in queries which is dependent on mysql

![img](http://cl.ly/image/3K0I2m1f1x2i/Screen%20Recording%202015-01-22%20at%2011.24%20am.gif)

--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -276,10 +276,12 @@ sv:
         Betalningen har gått igenom. Tack för att du handlar hos oss.
       payment_confirmation_footer: 'Vänliga hälsningar'
   search:
+    placeholder: "Sök..."
     settings:
       title: "Filtrera bort sökbara kolumner"
       text: "Välj vilka kolumner användare inte kan söka i. Detta är en ren säkerhetsinställning, vilka fält som faktiskt syns i er webshop kontrolleras via sitens mallar."
     products: "Sök produkter"
+    members: "Sök medlem"
   notices:
     page_template:
       created_by_user: "skapade sidmallen %{title}"
