--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -246,10 +246,12 @@ en:
         The payment has been approved. Thank you for shopping with us.
       payment_confirmation_footer: 'Best regards'
   search:
+    placeholder: "Search..."
     settings:
       title: "Filter searchable columns"
       text: "Select which columns wont be searchable by users. This is purely a security measure, what fields are actually available in your store is controlled via the templates for the site."
     products: "Search products"
+    members: "Search"
   notices:
     page_template:
       created_by_user: "created page template %{title}"
